data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_845.wast
;; 6. **Test Description**: Implement an exported function in module A that performs a sequence of arithmetic operations, includes a few `nop` instructions, and calls a function in module B. Validate if the arithmetic operations are correctly processed and the final result is unaffected by the `nop` instructions.

(assert_invalid
  (module
    (func (export "test")
      i32.const 42
      nop
      i32.const 8
      i32.add
      nop
      call 0
    )
    (func (result i32) (i32.const 50))
  )
  "type mismatch"
)